# python-proj-tmplt

./: LICENSE  README.md  makefile  pyproject.toml
requirements/: dev.txt  main.txt
src/mmm/: example.py  ttorch.py
test/: test_1.py
