[project]
name = "example_package"
dynamic = ["version"]
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
classifiers = [
	"Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]
requires-python = ">=3.9"
dependencies = [ "torch>=1.12", ]


[project.optional-dependencies]
dev = [ "pytest>=6.0" ]


[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.version]
path = "src/__about__.py"

[tool.pytest.ini_options]
testpaths = ["test"]

